# VCIDSpice

./: Cargo.toml  LICENSE  README.md
benches/: op_bench.rs
docs/: CONTRIBUTING.md  USAGE.md
examples/: basic_circuit.rs
src/: lib.rs
src/general/: circuit.rs  component.rs  mod.rs  role.rs
src/simulation/: mod.rs  op.rs  role.rs
