[package]
name = "VCIDSpice"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Dinges"]
description = "Circuit simulator lib"
license = "MIT"
repository = "https://github.com/WernerDinges/vcid_spice"
documentation = "https://docs.rs/vcid_spice"
readme = "README.md"
keywords = ["circuit", "simulation", "spice", "electronics"]
categories = ["simulation", "science"]

[lib]
name = "vcid_spice"
crate-type = ["cdylib", "rlib"]

[dependencies]

[dev-dependencies]
criterion = "0.6.0"